Fix: Remove scrollbar

--- a/app/layoutProvider.module.css
+++ b/app/layoutProvider.module.css
@@ -15,6 +15,13 @@
     flex: 1;
     overflow-x: hidden;
     overflow-y: scroll;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.children::-webkit-scrollbar {
+    display: none;
 }
 
 .bottom-wrapper {
